# ShxrkCleaner

./: .gitignore  CHANGELOG.txt  README.md  pyproject.toml  setup.py
cleaner/: __init__.py  __main__.py  cli.py  display.py  engine.py
